--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,13 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@interfaces/*":["src/app/interfaces/*"],
+      "@services/*":["src/app/services/*"],
+      "@components/*":["src/app/components/*"],
+      "@pages/*":["src/app/pages/*"]
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
